--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -170,7 +170,7 @@ postgres:
   init: true  # Initialize db. Set it to false in production after initializing once.
   upgrade:
     set: false  # accepts true or false value as per need.
-    version: 1.2.0-rc1 # version gto which upgrade is needed.
+    version: develop # version gto which upgrade is needed.
     type: release #should have two values release or revoke as per need.
     info_file: '{{tmp_dir}}/upgrade.db'
 
@@ -241,55 +241,55 @@ repos:
   commons:
     src: https://github.com/mosip/commons 
     dest: '{{tmp_dir}}/commons'
-    tag: 1.2.0-rc1
+    tag: develop
     githubuser: ''
     githubpassword: ''
   prereg:
     src: https://github.com/mosip/pre-registration
     dest: '{{tmp_dir}}/pre-registration'
-    tag: 1.2.0-rc1
+    tag: develop
     githubuser: ''
     githubpassword: ''
   regproc:
     src: https://github.com/mosip/registration
     dest: '{{tmp_dir}}/registration'
-    tag: 1.2.0-rc1
+    tag: develop
     githubuser: ''
     githubpassword: ''
   idrepo:
     src: https://github.com/mosip/id-repository
     dest: '{{tmp_dir}}/id-repository'
-    tag: 1.2.0-rc1
+    tag: develop
     githubuser: ''
     githubpassword: ''
   ida:
     src: https://github.com/mosip/id-authentication
     dest: '{{tmp_dir}}/id-authentication'
-    tag: 1.2.0-rc1
+    tag: develop
     githubuser: ''
     githubpassword: ''
   pms:
     src: https://github.com/mosip/partner-management-services
     dest: '{{tmp_dir}}/partner-management-services'
-    tag: 1.2.0-rc1
+    tag: develop
     githubuser: ''
     githubpassword: ''
   websub:
     src: https://github.com/mosip/websub
     dest: '{{tmp_dir}}/websub'
-    tag: 1.2.0-rc1
+    tag: develop
     githubuser: ''
     githubpassword: ''
   ref_impl:
     src: https://github.com/mosip/mosip-data
     dest: '{{tmp_dir}}/mosip-ref-impl'
-    tag: 1.2.0-rc1
+    tag: develop
     githubuser: ''
     githubpassword: ''
   hotlist:
     src: https://github.com/mosip/admin-services
     dest: '{{tmp_dir}}/admin-services'
-    tag: 1.2.0-rc1
+    tag: develop
     githubuser: ''
     githubpassword: ''
 
@@ -402,7 +402,7 @@ config_repo:
   # config server points to the same. Any changes done on local repo and will not  get reflected in 
   # the parent git repo. 
   git_repo_uri: https://github.com/mosip/mosip-config
-  version: 1.2.0-rc1
+  version: develop
   private: false #  true if repo is private
   gitusername: '' # if private==true set username here and password in secrets as below
   gitpassword: '{{secrets.config_repo.password}}'
