[MOSIP-16793] restructured keycloak helm charts

--- a/deployment/sandbox-v2/helm/charts/keycloak/templates/keycloak-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/keycloak/templates/keycloak-dep.yaml
@@ -25,7 +25,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.name }}
-        image: {{ .Values.dockerImage }}:{{ .Values.dockerTag }} 
+        image: {{ .Values.dockerImage }}
         env:
         - name: KEYCLOAK_USER 
           value: {{ .Values.keycloakUser }}
