ansible playbook to upload certificates for mosip

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -471,3 +471,7 @@ utils_dir: '{{install_root}}/utils'
 pri_lang: 'hin'
 
 regproc_clamav_jar_path: /artifactory/libs-release-local/clamav/kernel-virusscanner-clamav.jar  
+
+## Upload certificates
+postmanCollectionJSON: '{{install_root}}/roles/uploadCerts/meta/certUpload_1.1.5.postman_collection.json'
+postmanCollectionEnvVarJSON: '{{install_root}}/roles/uploadCerts/meta/certUpload_1.1.5.postman_environment.json'
