[MOSIP-16793] resolved the merge conflicts and ports mapping issue

--- a/deployment/sandbox-v2/helm/charts/pms/templates/partner-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/partner-dep.yaml
@@ -53,7 +53,7 @@ spec:
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.partner.containerPort }}
+        - containerPort: {{ .Values.services.partner.ports.containerPort }}
         readinessProbe:
           httpGet:
             path: {{ .Values.services.partner.healthUrl }}
