--- a/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
@@ -11,6 +11,9 @@ spec:
   - http:
       paths:
       - path: {{ .Values.services.ingress }}
+        pathType: ImplementationSpecific
         backend:
-          serviceName: {{ .Values.services.serviceName }}
-          servicePort: {{ .Values.services.servicePort }}
+          service:
+            name: {{ .Values.services.serviceName }}
+            port: 
+              number: {{ .Values.services.servicePort }}
