--- a/deployment/sandbox-v2/helm/charts/prereg/templates/captcha-dep.yaml
+++ b/deployment/sandbox-v2/helm/charts/prereg/templates/captcha-dep.yaml
@@ -34,19 +34,21 @@ spec:
         {{- include "resourcesDefinition" (dict "res" $podconfig.resources) | indent 8 }}
         env:
         - name: active_profile_env
-          value: {{ .Values.activeProfileEnv }} 
+          value: {{ .Values.activeProfileEnv }}
         - name: spring_config_label_env
-          value: {{ .Values.springConfigLabel }} 
+          value: {{ .Values.springConfigLabel }}
         - name: spring_config_url_env
-          value: {{ .Values.configServerUrl }} 
+          value: {{ .Values.configServerUrl }}
         - name: artifactory_url_env
-          value: {{ .Values.artifactoryUrl }} 
+          value: {{ .Values.artifactoryUrl }}
         - name: is_glowroot_env
           value: {{ .Values.isGlowroot }}
         - name: JDK_JAVA_OPTIONS
           value: {{ $podconfig.java_opts }}
         ports:
-        - containerPort: {{ .Values.services.captcha.containerPort }}
+        - containerPort: {{ .Values.services.captcha.ports.containerPort }}
+        readinessProbe:
+          httpGet:
             path: {{ .Values.services.captcha.healthUrl }}
             port: {{ .Values.services.captcha.ports.containerPort }}
           periodSeconds: {{ .Values.probe.period }}
