updated the required changes
1. removed version specific file names
2. regarding the modules for which certs will be exchanged by the script.
3. ADD the same in the site.yml at the end

--- a/deployment/sandbox-v2/group_vars/all.yml
+++ b/deployment/sandbox-v2/group_vars/all.yml
@@ -473,5 +473,5 @@ pri_lang: 'hin'
 regproc_clamav_jar_path: /artifactory/libs-release-local/clamav/kernel-virusscanner-clamav.jar  
 
 ## Upload certificates
-postmanCollectionJSON: '{{install_root}}/roles/uploadCerts/meta/certUpload_1.1.5.postman_collection.json'
-postmanCollectionEnvVarJSON: '{{install_root}}/roles/uploadCerts/meta/certUpload_1.1.5.postman_environment.json'
+postmanCollectionJSON: '{{install_root}}/roles/uploadCerts/meta/certUpload.postman_collection.json'
+postmanCollectionEnvVarJSON: '{{install_root}}/roles/uploadCerts/meta/certUpload.postman_environment.json'
