--- a/deployment/sandbox-v2/playbooks/uploadCerts.yml
+++ b/deployment/sandbox-v2/playbooks/uploadCerts.yml
@@ -1,3 +1,6 @@
+# upload certificates for IDA, mpartner-default-auth, IDA-CRED-service, Mosip-Root, Resident,
+# mpartner-default-resident, print-partner, ABIS-partner
+
 - name: Upload certificates for mosip
   gather_facts: true
   hosts: console
