--- a/deployment/v3/reporting/values.yaml
+++ b/deployment/v3/reporting/values.yaml
@@ -1,20 +1,18 @@
-image:
-  registry: docker.io
-  #repository: bitnami/spark
-  repository: mosipdev/spark-py
-  tag: develop
-  ## Specify a imagePullPolicy
-  ## Defaults to 'Always' if image tag is 'latest', else set to 'IfNotPresent'
-  ## ref: http://kubernetes.io/docs/user-guide/images/#pre-pulling-images
-  ##
-  pullPolicy: IfNotPresent
+# this is for installing kafka with zookeeper from bitnami charts
+bitnami-kafka:
+  enabled: true
+  zookeeper:
+    enabled: true
 
-  ## Pull secret for this image
-  # pullSecrets:
-  #   - myRegistryKeySecretName
+# This is for debezium kafka connector
+debezium:
+  enabled: true
 
-  ## Set to true if you would like to see extra information on logs
-  ## It turns BASH and/or NAMI debugging in the image
-  ##
-  debug: false
+# This is for elasticsearch kafka connector
+confluentinc:
+  cp-kafka-connect:
+    enabled: true
 
+# this is for kafkaClient
+kafkaClient:
+  enabled: true
