--- a/deployment/sandbox-v2/helm/charts/pms/templates/ui-configmap.yaml
+++ b/deployment/sandbox-v2/helm/charts/pms/templates/ui-configmap.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  config.json: '{"baseUrl":"{{ tpl .Values.services.ui.apiHost . }}",  "pmpUrl" : "/pmp-ui/", "primaryLangCode": "eng", "secondaryLangCode": "ara", "version":"v1/"}'
+  config.json: '{"baseUrl": "{{ tpl .Values.services.ui.apiHost . }}",  "pmpUrl" : "/pmp-ui/", "primaryLangCode": "eng", "secondaryLangCode": "ara", "version": "/v1/"}'
 kind: ConfigMap
 metadata:
   name: {{ .Values.services.ui.configName }}
