--- a/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
@@ -10,10 +10,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: {{ .Values.services.ingress }}
+      - path: {{ .Values.services.websub.ingress }}
         pathType: ImplementationSpecific
         backend:
           service:
-            name: {{ .Values.services.serviceName }}
+            name: {{ .Values.services.websub.serviceName }}
             port: 
-              number: {{ .Values.services.servicePort }}
+              number: {{ .Values.services.websub.servicePort }}
