[PSA-120] added hub consolidator changes

--- a/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
+++ b/deployment/sandbox-v2/helm/charts/websub/templates/ingress.yaml
@@ -10,8 +10,10 @@ spec:
   rules:
   - http:
       paths:
-      - path: {{ .Values.services.ingress }}
+      - path: {{ .Values.services.websub.ingress }}
+        pathType: ImplementationSpecific
         backend:
-          serviceName: {{ .Values.services.serviceName }}
-          servicePort: {{ .Values.services.servicePort }}
-
+          service:
+            name: {{ .Values.services.websub.serviceName }}
+            port: 
+              number: {{ .Values.services.websub.servicePort }}
