--- a/deployment/sandbox-v2/podconfig.yml
+++ b/deployment/sandbox-v2/podconfig.yml
@@ -479,6 +479,12 @@ podconfig:
       maxUnavailable: 0
       minReadySeconds: 10
 
+    consolidator:
+      replicas: 1
+      maxSurge: 1
+      maxUnavailable: 0
+      minReadySeconds: 10
+
   ingress:
     nginx:
       replicas: 1 
