[ DSD-326 ] added new role for installing pandas on console machine

--- a/deployment/sandbox-v2/playbooks/console.yml
+++ b/deployment/sandbox-v2/playbooks/console.yml
@@ -39,6 +39,7 @@
      - {role: packages/psycopg2}
      - {role: packages/openjdk}
      - {role: packages/maven}
+     - {role: packages/pandas-pip3}
 
   tasks: 
     - name: Set read permission to home directory needed for nginx 
